[package]
name = "clia-tracing-appender"
version = "0.2.5"
authors = [
    "Cris Liao <clia@163.com>",
    "Zeki Sherif <zekshi@amazon.com>",
    "Tokio Contributors <team@tokio.rs>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/clia/tracing-appender"
homepage = "https://tokio.rs"
description = """
A personal temporary tracing-appender, support symlinking latest log file and local offset time format.
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing", "file-appender", "non-blocking-writer"]
edition = "2018"
rust-version = "1.53.0"

[dependencies]
clia-local-offset = "0.1.0"
crossbeam-channel = "0.5.6"
time = { version = "0.3.2", default-features = false, features = ["formatting", "parsing"] }
parking_lot = { optional = true, version = "0.12.1" }
symlink = "0.1.0"
thiserror = "1"

[dependencies.tracing-subscriber]
version = "0.3.0"
default-features = false
features = ["fmt", "std"]

[dev-dependencies]
criterion = { version = "0.3.6", default-features = false }
tracing = { version = "0.1.35" }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
